--- a/MovingPicturesV2/Views/Shared/_Layout.cshtml
+++ b/MovingPicturesV2/Views/Shared/_Layout.cshtml
@@ -55,9 +55,9 @@
 		</main>
 	</div>
 
-	<footer class="border-top footer text-muted">
+	<footer class="border-top footer text-muted bg-primary">
 		<div class="container">
-			&copy; 2023 - MovingPicturesV2 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+			&copy; 2023 - MovingPicturesV2
 		</div>
 	</footer>
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
