--- a/MovingPicturesV2/Areas/Customer/Views/Cart/Index.cshtml
+++ b/MovingPicturesV2/Areas/Customer/Views/Cart/Index.cshtml
@@ -75,7 +75,7 @@
 						<ul class="list-group mb-4">
 							<li class="d-flex justify-content-between align-items-center">
 								<h5 class="text-dark fw-semibold text-uppercase"> Total: </h5>
-								<h4 class="text-dark fw-bolder">@Model.CartTotal.ToString("c")</h4>
+								<h4 class="text-dark fw-bolder">@Model.OrderHeader.OrderTotal.ToString("c")</h4>
 							</li>
 						</ul>
 					</div>
