--- a/MovingPicturesV2/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/MovingPicturesV2/Areas/Customer/Views/Cart/Summary.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@model MovingPicturesV2.Models.ViewModels.ShoppingCartVM
+@using Microsoft.Extensions.Options
+@inject IOptions<MovingPicturesV2.Utility.StripeSettings> Stripe
+
 <form method="post">
 	<br />
 	<div class="backgroundWhiteBorder">
@@ -9,8 +12,8 @@
 						<i class="fa fa-shopping-cart"></i> &nbsp;
 						Order Summary
 					</div>
-					<div class="col-6 text-right">
-						<a class="btn btn-outline-info btn-sm">Back to Cart</a>
+					<div class="col-6 text-end">
+						<a asp-action="Index" class="btn btn-outline-info btn-sm">Back to Cart</a>
 					</div>
 				</div>
 				<div class="card-body">
@@ -19,7 +22,7 @@
 							<div class="col-12 col-lg-6 pb-4">
 								<div class="row">
 									<h4 class="d-flex justify-content-between align-items-center mb-3">
-										<span class="text-info">PickUp Details:</span>
+										<span class="text-info">Shipping Details:</span>
 									</h4>
 								</div>
 								<div class="row my-1">
@@ -27,7 +30,8 @@
 										<label>Name</label>
 									</div>
 									<div class="col-9">
-										<input type="text" class="form-control" />
+										<input asp-for="OrderHeader.Name" type="text" class="form-control" />
+										<span asp-validation-for="OrderHeader.Name" class="text-danger"></span>
 									</div>
 								</div>
 								<div class="row my-1">
@@ -35,7 +39,8 @@
 										<label>Phone</label>
 									</div>
 									<div class="col-9">
-										<input type="text" class="form-control" />
+										<input asp-for="OrderHeader.PhoneNumber" type="text" class="form-control" />
+										<span asp-validation-for="OrderHeader.PhoneNumber" class="text-danger"></span>
 									</div>
 								</div>
 								<div class="row my-1">
@@ -43,7 +48,8 @@
 										<label>Street Address</label>
 									</div>
 									<div class="col-9">
-										<input type="text" class="form-control" />
+										<input asp-for="OrderHeader.StreetAddress" type="text" class="form-control" />
+										<span asp-validation-for="OrderHeader.StreetAddress" class="text-danger"></span>
 									</div>
 								</div>
 								<div class="row my-1">
@@ -51,7 +57,8 @@
 										<label>City</label>
 									</div>
 									<div class="col-9">
-										<input type="text" class="form-control" />
+										<input asp-for="OrderHeader.City" type="text" class="form-control" />
+										<span asp-validation-for="OrderHeader.City" class="text-danger"></span>
 									</div>
 								</div>
 								<div class="row my-1">
@@ -59,7 +66,8 @@
 										<label>State</label>
 									</div>
 									<div class="col-9">
-										<input type="text" class="form-control" />
+										<input asp-for="OrderHeader.State" type="text" class="form-control" />
+										<span asp-validation-for="OrderHeader.State" class="text-danger"></span>
 									</div>
 								</div>
 								<div class="row my-1">
@@ -67,7 +75,8 @@
 										<label>Postal Code</label>
 									</div>
 									<div class="col-9">
-										<input type="text" class="form-control" />
+										<input asp-for="OrderHeader.PostalCode" type="text" class="form-control" />
+										<span asp-validation-for="OrderHeader.PostalCode" class="text-danger"></span>
 									</div>
 								</div>
 							</div>
@@ -76,16 +85,19 @@
 									<span class="text-info">Order Summary:</span>
 								</h4>
 								<ul class="list-group mb-3">
-									<li class="list-group-item d-flex justify-content-between">
-										<div>
-											<h6 class="my-0">--TITLE--</h6>
-											<small class="text-muted">Quantity: --COUNT--</small>
-										</div>
-										<span class="text-muted">$ --PRICE* COUNT--</span>
-									</li>
+									@foreach (var details in Model.ListCart)
+									{
+										<li class="list-group-item d-flex justify-content-between">
+											<div>
+												<h6 class="my-0">@details.Product.Title</h6>
+												<small class="text-muted">Quantity: @details.Count</small>
+											</div>
+											<span class="text-muted">@((details.Price * details.Count).ToString("c"))</span>
+										</li>
+									}
 									<li class="list-group-item d-flex justify-content-between bg-light">
-										<small class="text-info">Total (USD)</small>
-										<strong class="text-info">$--GRAND TOTAL--</strong>
+										<small class="text-info">Total </small>
+										<strong class="text-info">@Model.OrderHeader.OrderTotal.ToString("c")</strong>
 									</li>
 								</ul>
 							</div>
