Implemented email sender and controller authorization.

--- a/MovingPicturesV2/Views/Shared/_Layout.cshtml
+++ b/MovingPicturesV2/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using MovingPicturesV2.Utility;
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
@@ -15,7 +16,7 @@
 	<header>
 		<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">Navbar</a>
+				<a class="navbar-brand" href="/">Moving Pictures</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -24,26 +25,28 @@
 						<li class="nav-item">
 							<a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Management</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" asp-area="Admin" asp-controller="Genre" asp-action="Index">Genres</a>
-								<a class="dropdown-item" asp-area="Admin" asp-controller="MediaType" asp-action="Index">Media Types</a>
-								<a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Products</a>
-								<div class="dropdown-divider">
+						@if (User.IsInRole(SD.Role_Admin))
+						{
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Management</a>
+								<div class="dropdown-menu">
+									<a class="dropdown-item" asp-area="Admin" asp-controller="Genre" asp-action="Index">Genres</a>
+									<a class="dropdown-item" asp-area="Admin" asp-controller="MediaType" asp-action="Index">Media Types</a>
+									<a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Products</a>
+									<div class="dropdown-divider">
+									</div>
+									<a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Companies</a>
 								</div>
-								<a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Companies</a>
-							</div>
+							</li>
+						}
+						<li class="nav-item">
+							<a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Manage Orders</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index"><i class="bi bi-cart"></i></a>
 						</li>
 					</ul>
 					<partial name="_LoginPartial" />
-					@* <form class="d-flex">
-					<input class="form-control me-sm-2" type="search" placeholder="Search">
-					<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-					</form> *@
 				</div>
 			</div>
 		</nav>
